fixed homepage and finished resources except some spacing

--- a/src/components/resourcesPage/resourcesIntro.css
+++ b/src/components/resourcesPage/resourcesIntro.css
@@ -1,4 +1,4 @@
-.largeText{
+.largeTextIntro{
     color: var(--Stroke-Black, #090A0C);
 /* h2 */
 font-family: Exo 2;
@@ -6,9 +6,12 @@ font-size: 3vw;
 font-style: normal;
 font-weight: 600;
 line-height: 115%;
+text-align: left;
+margin:0;
+margin-right: 4vw;
 }
 
-.smallText{
+.smallTextIntro{
     color: var(--Stroke-Black, #090A0C);
 /* h3 */
 font-family: Exo 2;
@@ -16,13 +19,20 @@ font-size: 1.75vw;
 font-style: normal;
 font-weight: 400;
 line-height: 5vh; /* 150% */
+text-align: left;
+margin:0;
+margin-right: 4vw;
 }
 
-.textContainer{
-    width:50vw;
+.textContainerIntro{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;;;
     text-align: left;
-    margin-left: 5vw;
-    margin-top: 3vw;
+    margin:0;
+    margin-right: 2vw;
+    margin-top: 11vh;
+    padding:0;
 }
 
 .imgContainer{
@@ -35,12 +45,10 @@ line-height: 5vh; /* 150% */
     height:auto;
 }
 
-.contentContainer{
+.contentContainerIntro{
     display:flex;
     flex-direction: row;
-    align-items: center;
-    width:100vw;
-    height:auto;
-    margin-top: 10vh;
+    justify-content: flex-start;
+    margin: 10vh 5vw 0 5vw;
     align-items: flex-start;
 }
