--- a/src/components/tagline/statsParagraph/statsParagraph.css
+++ b/src/components/tagline/statsParagraph/statsParagraph.css
@@ -10,21 +10,24 @@
 }
 
 .largeText{
+    
     text-align: left;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 5vh;
+    font-size: 3.2vw;
     font-weight: 550;
-    margin: 8vh 20.5vw 5vh 20.5vw;
+    margin: 8vh 18vw 5vh 18vw;
     line-height: 8vh;
     color:#222222
+
+    
 }
 
 .smallText{
     text-align: left;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 4vh;
+    font-size: 2.5vw;
     font-weight: 300;
-    margin: 0 20.5vw;
+    margin: 0 18vw;
     
     
 }
