--- a/src/components/tagline/tagline.css
+++ b/src/components/tagline/tagline.css
@@ -8,8 +8,8 @@
 
 .background{
     background-image: url('taglineImages/taglineDarkFNB.jpg');
-    padding-top: 12vh;
-    padding-bottom: 52vh;
+    padding-top: 24vh;
+    padding-bottom: 40vh;
     background-position-y: 80%;
     height: 1vh;
     background-repeat: no-repeat;
